[package]
name = "webscraper-rs"
version = "0.1.0"
authors = ["leon"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.4.3"
postgres = {version = "0.17.5",features = ["with-chrono-0_4"]}
postgres-native-tls = "0.3.0"
native-tls = "0.2.4"
reqwest = { version = "0.10.7", features = ["blocking","stream"] }
select = "0.5.0"
url = "2.1.1"
r2d2_postgres = "0.16.0"
r2d2 = "0.8.9"
chrono = "0.4.15"
tokio-postgres = "0.5.5"
futures = "0.3"
tokio = {version = "0.2.22", features = ["full"]}
structopt = "0.3.16"
bytes = "0.5.6"
regex = "1.3.9"